[gd_scene load_steps=34 format=2]

[ext_resource path="res://Sprites/Units/BlueSoldierAnimation/BlueSoldierFrame1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/GameScripts/Soldier/SoldierScript.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Units/BlueSoldierAnimation/BlueSoldierFrame3.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Units/BlueSoldierAnimation/BlueSoldierFrame4.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Units/BlueSoldierAnimation/BlueSoldierFrame2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Units/BlueSoldierAnimation/BlueSoldierFrame5.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Units/BlueSoldierAnimation/BlueSoldierFrame6.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Units/BlueSoldierAnimation/BlueSoldierFrame7.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Units/BlueSoldierAnimation/BlueSoldierFrame8.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Units/BlueSoldierAnimation/BlueSoldierFrame9.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Units/BlueSoldierShootingAnimation/BlueSoldierShooting2.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Units/BlueSoldierShootingAnimation/BlueSoldierShooting1.png" type="Texture" id=12]
[ext_resource path="res://Models/GameModels/SoldierBulletModel.tscn" type="PackedScene" id=13]
[ext_resource path="res://Sprites/Units/RedSoldierAnimation/RedSoldierFrame2.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Units/RedSoldierAnimation/RedSoldierFrame6.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Units/RedSoldierShootingAnimation/RedSoldierShooting2.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Units/RedSoldierShootingAnimation/RedSoldierShooting1.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Units/RedSoldierAnimation/RedSoldierFrame3.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Units/RedSoldierAnimation/RedSoldierFrame9.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Units/RedSoldierAnimation/RedSoldierFrame8.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Units/RedSoldierAnimation/RedSoldierFrame4.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Units/RedSoldierAnimation/RedSoldierFrame1.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Units/RedSoldierAnimation/RedSoldierFrame5.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Units/RedSoldierAnimation/RedSoldierFrame7.png" type="Texture" id=24]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 22 ), ExtResource( 14 ), ExtResource( 18 ), ExtResource( 21 ), ExtResource( 23 ), ExtResource( 15 ), ExtResource( 24 ), ExtResource( 20 ), ExtResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 17 ) ],
"loop": false,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 10.1809

[sub_resource type="CircleShape2D" id=5]
radius = 10.1066

[sub_resource type="CapsuleShape2D" id=6]
radius = 13.5308
height = 67.1126

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 12 ) ],
"loop": false,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.0666667, 0.619608, 0.0588235, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.901961, 0.235294, 0.117647, 1 )

[node name="Soldier" type="KinematicBody2D"]
collision_mask = 3
script = ExtResource( 2 )
soldierBulletModel = ExtResource( 13 )
walkingAnimationEnemy = SubResource( 1 )
shootingAnimationEnemy = SubResource( 2 )

[node name="WalkingAnimation" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
playing = true

[node name="SoldierCollision" type="CollisionShape2D" parent="."]
position = Vector2( -0.647079, 0.32354 )
shape = SubResource( 4 )

[node name="SoldierArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SoldierArea"]
shape = SubResource( 5 )

[node name="ShootingRange" type="Area2D" parent="."]

[node name="ShootingRangeCollisionRange" type="CollisionShape2D" parent="ShootingRange"]
position = Vector2( 0, -40 )
shape = SubResource( 6 )

[node name="ShootingAnimation" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -21 )
frames = SubResource( 7 )

[node name="PointToShootFrom" type="Node2D" parent="."]
position = Vector2( 8.679, -36 )
rotation = 3.14159

[node name="ShootingCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -6.0
margin_top = 12.0
margin_right = 6.0
margin_bottom = 18.0
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 9 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="SoldierArea" to="." method="_on_SoldierArea_body_entered"]
[connection signal="body_entered" from="ShootingRange" to="." method="_on_Area2D_body_entered"]
[connection signal="animation_finished" from="ShootingAnimation" to="." method="_on_ShootingAnimation_animation_finished"]
